--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,12 +14,15 @@
     "bootstrap": "^5.3.2",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
